fix alignment

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -30,5 +30,5 @@
   padding-right: 10px;
   padding-top: 0px;
   padding-bottom: 0px;
-  margin-bottom: 10px
+  margin-bottom: 10px;
 }
